[package]
name = "pallet-contracts-benchmark-wasm"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
rstd = { package = "sp-std", path = "../../../primitives/sr-std", default-features = false }
runtime-io = { package = "sp-io", path = "../../../primitives/sr-io", default-features = false }
primitives = { package = "sp-core", path = "../../../primitives/core", default-features = false }
contracts = { package = "pallet-contracts", path = "..", default-features = false}

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3", path = "../../../client/utils/wasm-builder-runner" }

[features]
default = []
std = [
	"rstd/std",
	"primitives/std",
	"runtime-io/std",
	"contracts/std",
]
